--- a/overlay/SettingsResVenus/res/values/config.xml
+++ b/overlay/SettingsResVenus/res/values/config.xml
@@ -19,4 +19,7 @@
     <!-- Whether to show Minimum and Maximum refresh rate in display settings -->
     <bool name="config_show_refresh_rate_controls">true</bool>
     <bool name="config_supports_dynamic_refresh_rate_controls">true</bool>
+    
+    <!-- Whether to show a preference item for regulatory information in About phone -->
+    <bool name="config_show_regulatory_info">true</bool>
 </resources>
