Revert "venus: Remove doze brightness values"
This reverts commit 6b59c398af4b56d4320ea136b3c97f7f97e885e7.

--- a/rro_overlays/FrameworksResVenus/res/values/config.xml
+++ b/rro_overlays/FrameworksResVenus/res/values/config.xml
@@ -395,6 +395,13 @@
          May be less than the minimum allowed brightness setting
          that can be set by the user. -->
     <integer name="config_screenBrightnessDoze">17</integer>
+    <!-- 16/254 = 0.06299212598 -->
+    <item name="config_screenBrightnessDozeFloat" format="float" type="dimen">0.062992</item>
+
+    <!-- Screen brightness used to dim the screen when the user activity
+         timeout expires.  May be less than the minimum allowed brightness setting
+         that can be set by the user. -->
+    <integer name="config_screenBrightnessDim">13</integer>
 
     <!-- The bounding path of the cutout region of the main built-in display.
          Must either be empty if there is no cutout region, or a string that is parsable by
