--- a/rro_overlays/SettingsResVenus/res/values/evolution_strings.xml
+++ b/rro_overlays/SettingsResVenus/res/values/evolution_strings.xml
@@ -4,7 +4,8 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- ROM maintainer name -->
-    <string name="build_maintainer_summary">Joey Huab (Stallix)</string>
-    <string name="build_maintainer_telegram">https://t.me/Stallix</string>
+    <!-- About device screen, build maintainer -->
+    <string name="build_device_url">https://t.me/EvolutionXVenus</string>
+    <string name="build_maintainer_summary">Joey</string>
+    <string name="build_maintainer_donate_url">https://linktr.ee/Shaughzam</string>
 </resources>
