venus: Support touch sensitivity mode switching
Write the sysfs node to set touch sensitivity mode when the property
changes.

Bug: 199104397
Test: toggle the touch sensitivity button in Settings and check log.

Signed-off-by: davidycchen <davidycchen@google.com>
Signed-off-by: ralph950412 <ralph950412@gmail.com>
Change-Id: I1bd9258dcfa6897ee6febc5387c9504bcca1bb24

--- a/rro_overlays/SettingsResVenus/res/values/config.xml
+++ b/rro_overlays/SettingsResVenus/res/values/config.xml
@@ -22,4 +22,7 @@
     
     <!-- Whether to show a preference item for regulatory information in About phone -->
     <bool name="config_show_regulatory_info">true</bool>
+
+    <!-- Whether to show the Preference for Touch Sensitivity -->
+    <bool name="config_show_touch_sensitivity">true</bool>
 </resources>
