--- a/rro_overlays/SettingsResVenus/res/values/config.xml
+++ b/rro_overlays/SettingsResVenus/res/values/config.xml
@@ -25,4 +25,7 @@
 
     <!-- Whether to show the Preference for Touch Sensitivity -->
     <bool name="config_show_touch_sensitivity">true</bool>
+
+    <!-- The radius of the enrollment progress bar, in dp -->
+    <integer name="config_udfpsEnrollProgressBar" translatable="false">137</integer>
 </resources>
